# GC

./: .gitignore  CMakeLists.txt  README.md  a.py  mod.py
source/: gc.cpp  naive_gc.cu
